syntax = "proto3";

option csharp_namespace = "SimpleGrpcService";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message NewCustomerRequest {
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	bool isAlive = 4;
	int32 age = 5;
}

//int32
//bool
//float
//double
//string